--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
   </head>
 <body>
   <h1>Project 598</h1>
+  <p> Đây là trang của Project 598 </p>
+  <p> Thử nghiệm thành công </p> 
   </body>
 </html>
